--- a/static-page/how to be a good font-end developer/V2.html
+++ b/static-page/how to be a good font-end developer/V2.html
@@ -79,6 +79,8 @@
 		</aside>
 	</section>
 
+	<div class="clear"></div>
+
 	<footer>
 		<p>慕课网&nbsp;只学有用的！</p>
 	</footer>
@@ -86,4 +88,4 @@
 </html>
 
 
-<!-- 存在一个问题没有解决： footer 和 section 之间的 空隙没有设置成功 -->
+<!-- 存在一个问题没有解决：head头部与footer尾部没有紧贴整个浏览器的上面和底部 -->
